build: release Windows JBR package